fix path to photos

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/me.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/me.JPG)"></div>
 </section>
 
 <!-- Slide 2 (#10) -->
@@ -140,7 +140,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/leadership.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/leadership.JPG)"></div>
 </section>
 <!-- Slide 4 (#10) -->
 <section class="slide fade-6 kenBurns">
@@ -156,7 +156,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/hillel.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/hillel.JPG)"></div>
 </section>
 <!-- Slide 5 (#10) -->
 <section class="slide fade-6 kenBurns">
